@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmPixelConvert.h,v $
   Language:  C++
-  Date:      $Date: 2004/10/08 08:56:48 $
-  Version:   $Revision: 1.2 $
+  Date:      $Date: 2004/10/08 16:27:20 $
+  Version:   $Revision: 1.3 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -21,6 +21,7 @@
 #define GDCMPIXELCONVERTL_H
 
 #include "gdcmCommon.h"
+#include "gdcmRLEFramesInfo.h"
 
 /*
  * \brief Utility container for gathering the various forms the pixel data
@@ -59,11 +60,25 @@ bool ReadUncompressed( FILE* filePointer,
                        size_t expectedSize );
 bool ConvertGrayAndLutToRGB( uint8_t *lutRGBA );
 bool ReadAndUncompressRLE8Bits(FILE* fp, size_t uncompressedSize );
-static uint8_t* UncompressRLE16BitsFromRLE8Bits(
+static bool UncompressRLE16BitsFromRLE8Bits(
                        int XSize,
                        int YSize,
                        int NumberOfFrames,
                        uint8_t* fixMemUncompressed );
+static bool ReadAndUncompressRLEFragment(
+                                    uint8_t* decodedZone,
+                                    long fragmentSize,
+                                    long uncompressedSegmentSize,
+                                    FILE* fp );
+static bool gdcm_read_RLE_file   ( void* image_buffer,
+                                   int XSize,
+                                   int YSize,
+                                   int ZSize,
+                                   int BitsAllocated,
+                                   gdcmRLEFramesInfo* RLEInfo,
+                                   FILE* fp );
+
+
  
 
 };
